--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.2.0
   equatable: ^2.0.0
+  sqflite: ^2.0.0
+  path: ^1.8.0
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
