--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.5
   flutter_form_bloc: ^0.20.6
+  home_widget: ^0.1.3
 
 dev_dependencies:
   flutter_test:
