--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.0.5
   flutter_form_bloc: ^0.20.6
   home_widget: ^0.1.3
+  lottie: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/lotties/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
