--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: book_memo
+name: bookmemo
 description: Refonte applicative du projet BookMemo
 
 # The following line prevents the package from being accidentally published to
@@ -15,7 +15,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+# version:A.B.C+X : Do not forget to execute flutter packages get, flutter build or flutter run after this step
+# Android : A.B.C represents the versionName, X (the number after the +) represents the versionCode
+# iOS : A.B.C represents the CFBundleShortVersionString, X (the number after the +) represents the CFBundleVersion
+version: 2.0.0+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
