--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_form_bloc: ^0.20.6
   home_widget: ^0.1.3
   lottie: ^1.2.1
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
