--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   home_widget: ^0.1.3
   lottie: ^1.2.1
   shared_preferences: ^2.0.8
+  firebase_core: ^1.7.0
+  firebase_crashlytics: ^2.2.2
 
 dev_dependencies:
   flutter_test:
