--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  # ui
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^7.2.0
+  lottie: ^1.2.1
+  # == operator
   equatable: ^2.0.0
+  # database
   sqflite: ^2.0.0
+  shared_preferences: ^2.0.8
+  # path
   path: ^1.8.0
   path_provider: ^2.0.5
+  # export CSV into external storage and share it
+  csv: ^5.0.0
+  permission_handler: ^8.2.2
+  share_extend: ^2.0.0
+  # BloC
+  flutter_bloc: ^7.2.0
   flutter_form_bloc: ^0.20.6
+  # Android home widget
   home_widget: ^0.1.3
-  lottie: ^1.2.1
-  shared_preferences: ^2.0.8
+  # Firebase
   firebase_core: ^1.7.0
   firebase_crashlytics: ^2.2.2
 
