--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   csv: ^5.0.0
   permission_handler: ^8.2.2
   share_extend: ^2.0.0
+  # import file
+  file_picker: ^4.1.3
   # BloC
   flutter_bloc: ^7.2.0
   flutter_form_bloc: ^0.20.6
