--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,11 @@
     <true/>
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>Permet l import / export de votre bibliotheque sous format CSV</string>
+    <key>CFBundleLocalizations</key>
+    <array>
+    	<string>en</string>
+    	<string>fr</string>
+    </array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
