--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # database
   sqflite: ^2.0.0
   shared_preferences: ^2.0.8
+  synchronized: ^3.0.0
   # path
   path: ^1.8.0
   path_provider: ^2.0.5
@@ -50,6 +51,8 @@ dependencies:
   # BloC
   flutter_bloc: ^7.2.0
   flutter_form_bloc: ^0.20.6
+  # Provider for database
+  provider: ^6.0.0
   # Android home widget
   home_widget: ^0.1.3
   # Firebase
