--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   cached_network_image: ^3.1.0
   # barcode scanner
   flutter_barcode_scanner: ^2.0.0
+  # font
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
