--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.0.0+3
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -32,8 +32,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # ui
   cupertino_icons: ^1.0.2
-  lottie: ^1.2.1
-  flutter_svg: ^1.0.0
+  lottie: ^2.7.0
+  flutter_svg: ^2.0.9
   # == operator
   equatable: ^2.0.0
   # database
@@ -45,31 +45,35 @@ dependencies:
   path_provider: ^2.0.5
   # export CSV into external storage and share it
   csv: ^5.0.0
-  permission_handler: ^8.2.2
+  permission_handler: ^11.1.0
   share_extend: ^2.0.0
   # import file
-  file_picker: ^4.1.3
+  file_picker: ^6.1.1
   # BloC
-  flutter_bloc: ^7.2.0
-  flutter_form_bloc: ^0.20.6
+  flutter_bloc: ^8.1.3
+  # flutter_form_bloc: ^0.31.0 https://github.com/GiancarloCode/form_bloc/issues/339
+  flutter_form_bloc:
+    git:
+      url: https://github.com/Cavin6080/form_bloc.git
+      path: packages/flutter_form_bloc
   # Provider for database
   provider: ^6.0.0
   # Android home widget
-  home_widget: ^0.1.3
+  home_widget: ^0.4.1
   # Firebase
-  firebase_core: ^1.7.0
-  firebase_crashlytics: ^2.2.2
+  firebase_core: ^2.24.2
+  firebase_crashlytics: ^3.4.9
   # traductions
   easy_localization: ^3.0.0
   # graphics
-  fl_chart: ^0.40.0
+  fl_chart: ^0.66.0
   # HTTP request
-  http: ^0.13.4
+  http: ^1.1.2
   cached_network_image: ^3.1.0
   # barcode scanner
   flutter_barcode_scanner: ^2.0.0
   # font
-  google_fonts: ^2.1.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
